## Process this file with automake to produce Makefile.in

AM_CFLAGS          = # Append below
AM_CPPFLAGS        = -I$(top_builddir)/gnulib -I$(top_srcdir)/gnulib
AM_CPPFLAGS       += -I$(top_builddir)        -I$(top_srcdir)
AM_FCFLAGS         = -I$(top_builddir)        -I$(top_srcdir)
AM_LDFLAGS         = # Append below
BUILT_SOURCES      = # Append below
check_PROGRAMS     = # Append below
CLEANFILES         = # Append below
include_HEADERS    = # Append below
lib_LTLIBRARIES    = # Append below
noinst_HEADERS     = # Append below
noinst_LTLIBRARIES = # Append below
EXTRA_DIST         = # Append below

# Use MPI compiler wrappers since HDF5 wrappers break autodependencies.
CC=@MPICC@
FC=@MPIFC@

# Make HDF5 C APIs visible during compilation
# Notice HDF5 Fortran APIs are not used and so AM_FCFLAGS is not modified
AM_CFLAGS   += $(HDF5_CFLAGS)
AM_CPPFLAGS += $(HDF5_CPPFLAGS)

# Make public C APIs visible in resulting libraries-- see visibility.h
AM_CPPFLAGS += -DESIO_SHARED_EXPORTS

# Public ESIO C library
lib_LTLIBRARIES     += libesio.la
libesio_la_SOURCES   = chunksize.c
libesio_la_SOURCES  += error.c
libesio_la_SOURCES  += esio.c
libesio_la_SOURCES  += file-copy.c
libesio_la_SOURCES  += h5utils.c
libesio_la_SOURCES  += layout.c
libesio_la_SOURCES  += metadata.c
libesio_la_SOURCES  += restart-rename.c
libesio_la_LDFLAGS   = -release $(PACKAGE_VERSION)
libesio_la_LDFLAGS  += $(LTLIBINTL) # gnulib requirement
libesio_la_LIBADD    = ../gnulib/libgnu.la

# Config-time details saved using AX_PREFIX_CONFIG_H
BUILT_SOURCES += esio-config.h

# Headers shipped with the library
esio_includedir       = $(includedir)/esio
esio_include_HEADERS  = error.h
esio_include_HEADERS += esio.h
esio_include_HEADERS += version.h
esio_include_HEADERS += visibility.h
esio_include_HEADERS += esio-config.h

# Headers internal to the library
noinst_HEADERS += chunksize.h
noinst_HEADERS += file-copy.h
noinst_HEADERS += restart-rename.h
noinst_HEADERS += h5utils.h
noinst_HEADERS += layout.h
noinst_HEADERS += metadata.h

# Templated implementation files necessary for building the library
EXTRA_DIST += layout0.c
EXTRA_DIST += layout1.c
EXTRA_DIST += layout2.c
EXTRA_DIST += line.c
EXTRA_DIST += plane.c
EXTRA_DIST += attribute.f90
EXTRA_DIST += field.f90
EXTRA_DIST += line.f90
EXTRA_DIST += plane.f90

# Public Fortran library is a superset of libesio.la
lib_LTLIBRARIES          += libesiof.la
libesiof_la_LIBTOOLFLAGS  = --tag=FC
libesiof_la_SOURCES       = esio_c_binding.f90
libesiof_la_SOURCES      += esio.f90
libesiof_la_LIBADD        = libesio.la

# Fortran module generated by building libesiof.la; install it
moduledir      = @libdir@
module_DATA    = esio.mod

# Extra things to clean up
CLEANFILES     += *.mod *.gcno *.gcna

# License updates
include $(top_srcdir)/license.am

# Automatic dependency generation for Fortran
SFMAKEDEPEND_FLAGS =
include $(top_srcdir)/sfmakedepend.am

# Required for AX_AM_MACROS
@INC_AMINCLUDE@
